Add initial discovery structure

--- a/SparkleShare/Makefile.am
+++ b/SparkleShare/Makefile.am
@@ -19,12 +19,13 @@ SOURCES =  \
 	SparkleBubblesController.cs \
 	SparkleController.cs \
 	SparkleControllerBase.cs \
+	SparkleDiscovery.cs \
 	SparkleEntry.cs \
 	SparkleEventLog.cs \
 	SparkleEventLogController.cs \
 	SparkleExtensions.cs \
-	SparkleOptions.cs \
 	SparkleInvite.cs \
+	SparkleOptions.cs \
 	SparklePlugin.cs \
 	SparkleSetup.cs \
 	SparkleSetupController.cs \
